pushing for pull

--- a/LMS/static/ngTemplates/app.LMS.courses.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.courses.explore.html
@@ -6,6 +6,7 @@
       <div class="container-fluid">
         <i class="fa fa-book fa-4x"></i> <strong style="font-size:20px;" class="text-muted">{{course.title}}</strong>
       </div>
+
     </div>
 
     <hr>
@@ -78,7 +79,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="enrollment in course.enrollments">
         <span class="info-box-icon" style="background-color:white;">
           <div class="row">
-            <img style="width: 50%;" class="img" ng-src="{{enrollment.user | getDp}}">
+            <img style="width: 50%;" class="img" ng-src="{{enrollment.user}}">
           </div>
           <div class="row {{$index | rainbow}}" style="background:white;height:40px; margin-bottom:10px;">
             <span style="color:black;font-size:12px;color:white; top:-25px;position:relative;">{{enrollment.user | getName}}</span>
@@ -114,12 +115,16 @@
           {{b.book.title}}
         </div>
       </div>
-
-
+    </div>
+    <div class="row">
+      <hr>
+      <div class="container-fluid">
+        <button type="button" name="button" class="btn btn-primary" ng-click="blogPopup(bookDetails.pk)">link course to blog</button>
+      </div>
     </div>
 
   </div>
-  <div class="col-md-9"style="padding:0px;">
+  <div class="col-md-9" style="padding:0px;">
 
     <tabs-Strip tabs="tabs" active="activeTab"></tabs-Strip>
 
@@ -176,7 +181,7 @@
           <div class="col-md-7">
             <h5>{{h.comment}}</h5>
           </div>
-          <div class="text-right"style="padding-right:10px;">
+          <div class="text-right" style="padding-right:10px;">
             <a href="{{h.pdf}}"><i class="fa fa-file fa-fw" aria-hidden="true"></i> View file</a>
           </div>
 
@@ -204,7 +209,7 @@
       </div>
     </div>
 
-    <div class="container-fluid"style="padding-left:10px;padding-right:10px;">
+    <div class="container-fluid" style="padding-left:10px;padding-right:10px;">
       <div class="col-md-3" ng-repeat="a in announcements" style="margin-bottom:10px;">
         <div class="container-fluid card" style="min-height:180px;padding-top:8px;">
           <div class="text-center">
