--- a/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.form.html
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group">
             <label>Pincode</label>
-            <input type="text " class="form-control" ng-model="form.pincode">
+            <input type="text " class="form-control" ng-model="form.pincode"  uib-typeahead="pin as pin.pincode for pin in pinSearch($viewValue)">
           </div>
         </div>
       </div>
