--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -1,7 +1,6 @@
 <div class="col-md-3 animated fadeIn" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
-
   <div class="container-fluid" >
-    <div class="row" style="{{data.is_active ? 'background:white;':'background:rgb(221, 221, 221);'}}">
+    <div class="row" style="{{data.is_active ? 'background:white;':'background:#fff4df; !important'}} {{data.is_staff ? 'background:#ececff;':''}}">
       <div class="container-fluid card" style="padding-bottom:0px;">
         <div class="row" style="border-bottom: 1px solid #dedede;">
           <div class="col-md-4" style="padding:0px;">
