--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -22,6 +22,7 @@
             <span ng-if="closed" style="font-size:18px;color:red">Chat Closed</span>
           </div>
           <div class="col-md-3 " style="padding:0px;font-size:20px;text-align:center;border-radius:1px">
+
             <i class="fa fa-pencil " style="cursor:pointer;" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
           </div>
         </div>
@@ -38,6 +39,9 @@
         </div>
         <div class="col-md-1">
             <i ng-show="chatHistBtn" class="fa fa-eye pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding:4px 5px;" ng-click="getChatHistory(data.email)" title="Chat History"></i>
+        </div>
+        <div class="col-md-1" style="padding:4px 0px">
+            <img style="width:20px" ng-src="{{location.location.country_flag}}" alt="">
         </div>
         <div class="col-md-1">
             <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding:4px 5px;" ng-click="closeChatBox(index)"></i>
