--- a/static_shared/ngTemplates/reviewInfo.html
+++ b/static_shared/ngTemplates/reviewInfo.html
@@ -112,7 +112,7 @@
       <div ng-if="!msg.logs" class="row container-fluid" style="float:{{msg.sentByAgent ? 'right; background-color:#e7e7e7;color:black ':'left; background-color:#0075b1;color:white;'}} padding:10px;margin:8px;border-radius:{{msg.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
       <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;" ><h5>{{msg.message}}</h5></p>
       <!-- <p ng-if="msg.message.length>0 && msg.attachmentType != 'youtubeLink'" style="word-break: break-all !important;" ><h5>{{msg.message}}</h5></p> -->
-       <img ng-if="msg.attachmentType == 'image'" ng-src="{{msg.attachment}}" style="width:250px;" ng-click="imageClicked(msg.attachment)">
+       <img ng-if="msg.attachmentType == 'image' ||msg.attachmentType == 'instructionImage'" ng-src="{{msg.attachment}}" style="width:250px;" ng-click="imageClicked(msg.attachment)">
        <video ng-if="msg.attachmentType == 'video'" width="280" height="240" ng-src="{{msg.attachment}}" controls></video>
        <audio ng-if="msg.attachmentType == 'audio'" ng-src="{{msg.attachment}}" controls></audio>
        <p class="text-center" ng-if="msg.attachmentType == 'application'" style="word-wrap: break-word;"><a ng-href="{{msg.attachment}}" target = "_blank" ><i class="fa {{msg.attachment.split('chat/')[1] | fileTypeIcon }} fa-2x" ></i></a> <br> {{msg.attachment.split('chat/')[1]}}  </p>
