--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -258,10 +258,10 @@ style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
                   <button type="button" class="btn btn-danger btn-sm" ng-click="$event.stopPropagation();" mwl-confirm title="Delete" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="cancelMaterial(m.pk);"
                     confirm-button-type="default" cancel-button-type="default"> Cancel <i class="fa fa-close"></i> </button>
                   </div>
-                  <!-- <div class="col-md-1">
-                    <button ng-if="!m.vendor" type="button" class="btn btn-default" ng-click="createDC(m.pk);$event.stopPropagation();" > &nbsp; Create DC &nbsp; <i class="fa fa-plus"></i></button>
-                      <span ng-if="m.vendor"> <a class="btn btn-primary" style="cursor:pointer;" target="_blank" href="/api/support/deliveryChallan/?value={{m.pk}}">Download DC <i class="fa fa-download"  ng-click="$event.stopPropagation();"></i></a></span>
-                    </div> -->
+                  <div class="col-md-1">
+                    <button  type="button" class="btn btn-default" ng-click="createDC(m.pk);$event.stopPropagation();" > &nbsp; Delivery Challan &nbsp; <i class="fa fa-plus"></i></button>
+                      <!-- <span ng-if="m.vendor"> <a class="btn btn-primary" style="cursor:pointer;" target="_blank" href="/api/support/deliveryChallan/?value={{m.pk}}">Download DC <i class="fa fa-download"  ng-click="$event.stopPropagation();"></i></a></span> -->
+                    </div>
               </div>
             </div>
             <div class="row container-fluid" ng-if="m.open">
