--- a/support/static/ngTemplates/app.projects.service.create.html
+++ b/support/static/ngTemplates/app.projects.service.create.html
@@ -19,6 +19,10 @@
     <label>Email</label>
     <input type="text" class="form-control" ng-model="form.email">
   </div>
+  <div class="form-group">
+    <label>GST</label>
+    <input type="text" class="form-control" ng-model="form.gst">
+  </div>
   <!-- <div class="form-group">
     <label>About</label>
     <textarea class="form-control" rows="8" ng-model="form.about"></textarea>
