--- a/support/static/ngTemplates/app.deliveryChallan.explore.html
+++ b/support/static/ngTemplates/app.deliveryChallan.explore.html
@@ -8,7 +8,7 @@
                 <label> Customer Name : </label>
               </div>
               <div class="col-md-7 ">
-                <span> {{form.customer.name}}</span>
+                <span> {{form.customername}}</span>
               </div>
             </div>
 
@@ -18,10 +18,7 @@
                 <label> Customer Address : </label>
               </div>
               <div class="col-md-7 ">
-                <span> {{form.customer.address.street}}</span><br/>
-                <span> {{form.customer.address.city}}</span><br/>
-                <span> {{form.customer.address.state}}</span><br/>
-                <span>{{form.customer.address.country}} {{form.customer.address.pincode}}</span>
+                <span> {{form.customeraddress}}</span><br/>
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -29,7 +26,7 @@
                 <label> Customer GSTIN : </label>
               </div>
               <div class="col-md-7 ">
-                <span> {{form.customer.gst}}</span>
+                <span> {{form.customergst}}</span>
               </div>
             </div>
             <div class="row" style="padding-top:10px">
