--- a/PIM/static/ngTemplates/app.settings.prescriptItems.html
+++ b/PIM/static/ngTemplates/app.settings.prescriptItems.html
@@ -1,10 +1,10 @@
 <div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;">
   <div class="container-fluid card" style="padding-bottom:10px;min-height:150px" ng-click="rowActionClicked('info')">
-    <div class="row" style="height:60px;">
-      <div class="col-md-10" style="position:relative;display:block;">
-        <div class="row" style="padding-left:10px;">
-          <h3 style="margin-bottom:0px">{{data.name}}</h3>
-        </div>
+  <div class="row " style="border-bottom: 1px solid #dedede;height:70px;">
+      <div class="col-md-12 text-center">
+
+          <h3 style="margin-bottom:0px;font-size:20px">{{data.name}}</h3>
+
       </div>
       <!-- <div class="col-md-2" style="position:relative;display:block;">
         <div class="row" style="margin-top:20px;">
@@ -14,17 +14,11 @@
         </div>
       </div> -->
     </div>
-    <div class="row" ng-if="data.contactPerson" style="padding-left:15px;">
-      <strong><i class="fa fa-globe"></i> </strong> <a href="{{compDetails.web}}" target="_blank">{{data.web}}</a>
-    </div>
-    <div class="row" ng-if="data.contactPerson" style="padding-left:15px;">
-      <strong>Telephone:</strong> {{data.telephone}}
-    </div>
-    <div class="row" style="padding-left:15px;">
-      <strong>Contact Person:</strong> {{data.contactPerson[0].first_name}} {{data.contactPerson[0].last_name}}
-    </div>
-    <div class="row" style="padding-left:15px;">
-      <strong>No of Prescipts:</strong> {{data.noOfPrescript}}
+    <div class="row" ng-if="data.contactPerson" style="padding:15px;">
+      <p><strong><i class="fa fa-globe"></i> </strong> <a href="{{compDetails.web}}" target="_blank">{{data.web}}</a></p>
+      <p><strong>Telephone:</strong> {{data.telephone}}</p>
+      <p><strong>Contact Person:</strong> {{data.contactPerson[0].first_name}} {{data.contactPerson[0].last_name}}</p>
+      <p><strong>No of Prescipts:</strong> {{data.noOfPrescript}}</p>
     </div>
   </div>
 </div>
