--- a/LMS/static/ngTemplates/app.LMS.book.section.html
+++ b/LMS/static/ngTemplates/app.LMS.book.section.html
@@ -10,6 +10,10 @@
         <label>Short Url</label>
         <input ng-model="Sectionform.shortUrl" type="text" class="form-control">
       </div>
+      <div class="form-group">
+        <label>Description</label>
+        <textarea ng-model="Sectionform.description" type="text" class="form-control" rows="5" style="resize:none;"></textarea>
+      </div>
     </div>
     <div class="row">
       <button type="button" class="btn btn-primary" ng-click="saveSection()">
