--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -42,7 +42,7 @@
         </div>
         <div class="col-md-1" style="padding:4px 0px" ng-click="showCountryDetails()">
           <!-- {{location.location.country_flag}} -->
-          <img style="width:20px" ng-src="{{location.location.country_flag}}" alt="">
+          <img style="width:20px" ng-src="{{location.location.flag}}" alt="">
         </div>
         <div class="col-md-1">
             <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding:4px 5px;" ng-click="closeChatBox(index)"></i>
