--- a/support/static/ngTemplates/app.support.showCountryDetails.modal.html
+++ b/support/static/ngTemplates/app.support.showCountryDetails.modal.html
@@ -1,4 +1,4 @@
-<ul>
+<ul style="list-style: none;padding: 20px;line-height:2">
   <li>IP address: {{locationInfo.ip}}</li>
   <li>City: {{locationInfo.city}}</li>
   <li>Region: {{locationInfo.region_name}}</li>
