--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -13,7 +13,7 @@
       </a> -->
 
       <a class="navbar-brand" href="/" style="margin-left:0px;padding:7px">
-        <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
+        <img ng-src="{{brandLogo}}" style="height:100%;" />
         <!-- <span><h1 style="margin:0px;color:rgb(12, 122, 150);">CIOC</h1></span> -->
       </a>
       <div class="navbar-brand" style="margin-right:30px;"><i class="fa fa-angle-right"></i> ERP  </div>
