--- a/LMS/static/ngTemplates/app.LMS.book.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.book.explore.html
@@ -30,6 +30,7 @@
             <br>
             <div class="row" ng-if="blogType=='edit'">
               <div class="col-md-8">
+                <label>Title : </label> {{blogData.title}} <br>
                 <label>URL suffix : </label> {{blogData.shortUrl}} <br>
                 <label>Description : </label> {{blogData.description}} <br>
                 <label>Tags : </label> {{blogData.tagsCSV}} <br>
