--- a/LMS/static/ngTemplates/app.LMS.configure.form.html
+++ b/LMS/static/ngTemplates/app.LMS.configure.form.html
@@ -129,6 +129,7 @@
             <div class="col-md-11">
               <div class="well well-sm">
                 {{s.title}}
+                <i class="fa fa-pencil pull-right" style="margin-top:0px;cursor:pointer;" ng-click="editSection($index)"></i>
               </div>
               <div class="row" style="cursor:pointer;padding-top:-20px;padding-bottom:20px;padding-right:30px;padding-left:20px">
                 <button type = "button" class="btn btn-primary btn-sm" ng-click="addSection($index,'bottom')"> <i class="fa fa-plus"></i> Add </button>
