--- a/LMS/static/ngTemplates/app.LMS.book.section.html
+++ b/LMS/static/ngTemplates/app.LMS.book.section.html
@@ -1,6 +1,7 @@
 <div class="row" style="margin-top:20px;margin-left:10px">
   <div class="col-md-11">
-    <p align="center"><b>Section </b></p><hr>
+    <p align="center"><b>Section </b></p>
+    <hr>
     <div class="row">
       <div class="form-group">
         <label>Title</label>
@@ -8,7 +9,7 @@
       </div>
       <div class="form-group">
         <label>Short Url</label>
-        <input ng-model="Sectionform.shortUrl" type="text" class="form-control">
+        <input ng-model="Sectionform.shortUrl" type="text" class="form-control" ng-disabled="editmode == true">
       </div>
       <div class="form-group">
         <label>Description</label>
@@ -16,8 +17,11 @@
       </div>
     </div>
     <div class="row">
-      <button type="button" class="btn btn-primary" ng-click="saveSection()">
+      <button type="button" class="btn btn-primary" ng-click="saveSection()" ng-if="editmode == false ">
         Save
+      </button>
+      <button type="button" class="btn btn-primary" ng-click="saveSection()" ng-if="editmode == true ">
+        Update
       </button>
       <button type="button" class="btn btn-default pull-right" ng-click="cancelSection()">
         Cancel
