--- a/LMS/static/ngTemplates/app.LMS.evaluation.form.html
+++ b/LMS/static/ngTemplates/app.LMS.evaluation.form.html
@@ -5,6 +5,14 @@
 
     <div class="row">
       <div class="form-group">
+        <label style="margin-top:20px;margin-left:20px">QuestionPaper Title</label>
+        <div class="row" style="margin-top:10px;margin-left:10px">
+          <div class="col-md-4 text-center">
+            <input type="text" class="form-control" ng-model="form.name">
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
         <label style="margin-top:20px;margin-left:20px">Select The Type</label>
         <br><br>
         <div class="row">
@@ -114,10 +122,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
-      <label>QuestionPaper Title</label>
-      <input type="text" class="form-control" ng-model="titlename">
-    </div>
+
     <button class="btn btn-primary" ng-click="save()">Save</button>
   </div>
 
