--- a/homepage/static/ngTemplates/app.homepage.signin.html
+++ b/homepage/static/ngTemplates/app.homepage.signin.html
@@ -23,12 +23,16 @@
     </div>
     <h4 class="heading_small text-center or">OR</h4>
     <div class="col-md-8 col-md-offset-2 ph_div">
-      <div class="login-input-group">
+      <div class="alert alert-{{form.errorType}}" ng-if="form.errorMessage.length>0">{{form.errorMessage}}</div>
+      <div class="login-input-group form-group">
         <label>Phone Number</label>
-        <input type="tel" class="form-control" required="" ng-focus="slideDown()" placeholder="+91" maxlength="10">
-        <div class="error-container">Enter a valid phone number</div>
+        <input type="tel" class="form-control" required="" ng-focus="slideDown()" placeholder="+91" maxlength="10" ng-model='form.number'>
+        <div class="help-block" ng-if="!form.otpmode">Enter a valid phone number</div>
       </div>
-      <button type="button" class="btn_gradient form-control" style="padding-bottom:30px;">
+      <div class="login-input-group form-group" ng-if="form.otpmode">
+        <input type="text" class="form-control" placeholder="Enter OTP" ng-model='form.otp'>
+      </div>
+      <button type="button" class="btn_gradient form-control" style="padding-bottom:30px;" ng-click="loginFunction()">
         LOGIN
       </button>
     </div>
