--- a/support/static/ngTemplates/app.support.editUserDetails.modal.html
+++ b/support/static/ngTemplates/app.support.editUserDetails.modal.html
@@ -15,7 +15,7 @@
          </div>
          <div class="form-group">
            <label for="phNo">Phone No:</label>
-           <input type="text" class="form-control" id="phNo" ng-model="form.phoneNumber" placeholder="Enter Phone No">
+           <input type="text" class="form-control" id="phNo" ng-model="form.phoneNumber" placeholder="Enter Phone No" onfocusout="checkPhone()">
          </div>
          <div class="form-group">
            <label for="notes">Notes:</label>
