--- a/static_shared/ngTemplates/reviewInfoQC.html
+++ b/static_shared/ngTemplates/reviewInfoQC.html
@@ -8,8 +8,7 @@
     <div style="margin:15px 0px">
       <img style="width:5rem" ng-if="msgData.user_id" src="{{msgData.user_id | getDP}}" alt="">
       <div class="" style="display:inline-block">
-        <!-- <p style="font-size:16px;font-weight:700">{{msgData.user_id | getName}}</p> -->
-          <p ng-if="msgData.name"><strong>{{msgData.name}}</strong></p>
+        <p ng-if="" style="font-size:16px;font-weight:700">{{msgData.user_id | getName}}</p>
       </div>
     </div>
     <span class="btn btn-primary" ng-click="showChart()" style="float:right">Change Status</span>
