--- a/support/static/ngTemplates/app.qualityCheck.explore.html
+++ b/support/static/ngTemplates/app.qualityCheck.explore.html
@@ -127,7 +127,10 @@
         <p style="font-size:15px"><strong>Created : </strong>{{msgData.created | date : 'dd-MMM-yyyy'}}</p>
         <p style="font-size:15px" ng-if="msgData.chatDuration>0.0"><strong>Chat Duration : </strong>{{msgData.chatDuration}} Min</p>
         <p style="font-size:15px" ng-if="msgData.company"><strong>Client : </strong>{{msgData.company}}</p>
-        <p style="font-size:15px" ng-if="msgData.email"><strong>Visitor's Email : </strong>{{msgData.email}}</p>
+        <p ng-if="visitorDetails.email"><strong>Visitor's Email : </strong>{{visitorDetails.email}}</p>
+        <p ng-if="visitorDetails.name"><strong>Visitor's Name : </strong>{{visitorDetails.name}}</p>
+        <p ng-if="visitorDetails.phoneNumber"><strong>Visitor's Number : </strong>{{visitorDetails.phoneNumber}}</p>
+        <p><strong>Device IP : </strong>{{msgData.userDeviceIp}}</p>
         <p style="font-size:15px" ng-if="msgData.customerRating"><strong>Rating : </strong>{{msgData.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></p>
         <p style="font-size:15px" ng-if="msgData.customerFeedback"><strong>Feedback : </strong>{{msgData.customerFeedback}}</p>
         <p style="font-size:15px" ng-if="msgData.uid!=none"><strong>Status : </strong>{{msgData.status}}
