--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div ng-if="!sideMenuVisibility" class="row" style="padding:15px;text-align:center">
-    <img ng-src="{{brandLogo}}" class="img img-circle" style="width:50px;float: none;">
+    <img ng-src="{{brandLogo}}" class="img img-circle" style="width:50px;float: none;background-color:#fff;padding: 2px 0 2px 3px;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)">
   </div>
   <div class="row" style="margin:0px;">
     <div class="container-fluid">
