--- a/LMS/static/ngTemplates/app.LMS.evaluation.form.html
+++ b/LMS/static/ngTemplates/app.LMS.evaluation.form.html
@@ -7,8 +7,8 @@
       <div class="col-md-6">
         <div class="form-group">
           <label style="margin-top:20px;">QuestionPaper Title</label>
-          <div class="row" style="margin-top:10px;">
-            <div class="col-md-10 text-center">
+          <div class="row" style="margin-top:20px;">
+            <div class="col-md-10 text-center" >
               <input type="text" class="form-control" ng-model="form.name">
             </div>
           </div>
@@ -16,10 +16,10 @@
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <label style="margin-top:20px;">QuestionPaper Title</label>
-          <div class="row" style="margin-top:10px;">
+          <label style="margin-top:20px;">Set Time</label>
+          <div class="row" style="margin-top:0px;">
             <div class="col-md-10 text-center">
-              <input type="text" class="form-control" ng-model="form.name">
+                 <div uib-timepicker ng-model="form.timelimit"  hour-step="hstep" minute-step="mstep" show-meridian="false"></div>
             </div>
           </div>
         </div>
