--- a/finance/static/ngTemplates/app.finance.inboundInvoices.form.html
+++ b/finance/static/ngTemplates/app.finance.inboundInvoices.form.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-group">
             <label>Pincode</label>
-            <input type="text " class="form-control" ng-model="form.pincode">
+            <input type="text " class="form-control" ng-model="form.pincode"  uib-typeahead="pin as pin.pincode for pin in pinSearch($viewValue)">
           </div>
         </div>
       </div>
@@ -52,16 +52,16 @@
         <div class="form-group">
           <label>Payment Due Date</label>
           <div class="input-group">
-            <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.deliveryDate" is-open="status.opened" />
+            <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.paymentDueDate" is-open="status.payment" />
             <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+                <button type="button" class="btn btn-default" ng-click="status.payment = true;"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
           </div>
         </div>
 
         <div class="form-group">
           <label>GSTIN</label>
-          <input type="text " class="form-control" ng-model="form.pincode">
+          <input type="text " class="form-control" ng-model="form.gstTin">
         </div>
 
       </div>
@@ -121,7 +121,7 @@
               <td><input type="text" class="form-control-pos text-center" ng-model="v.product"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.price"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.qty"></td>
-              <td><input type="text" class="form-control-pos text-center" ng-model="v.productMeta" uib-typeahead="meta as meta.code for meta in productMetaSearch($viewValue)"></td>
+              <td><input type="text" class="form-control-pos text-center" ng-model="v.hsn" uib-typeahead="meta as meta.code for meta in productMetaSearch($viewValue)"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.tax"></td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.total"></td>
               <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td>
