--- a/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
+++ b/finance/static/ngTemplates/app.finance.purchaseOrder.explore.html
@@ -1,84 +1,143 @@
 <div ng-controller="businessManagement.finance.purchaseOrder.explore">
 
-<div class="row" style="padding-top:20px">
-  <div class="col-md-3">
-    <div class="row">
-      <div class="col-md-12">
-        <label> Name : </label>
-        {{data.name}}
-      </div>
-      <div class="col-md-12">
-        <label> Person Name : </label>
-        {{data.personName}}
-      </div>
-      <div class="col-md-12">
-        <label> Status : </label>
-        {{data.status}}
-      </div>
-      <div class="col-md-12">
-        <label> Address : </label>
-        {{data.address}}
-      </div>
-      <div class="col-md-12">
-        <label> PO Number : </label>
-        {{data.poNumber}}
-      </div>
-      <div class="col-md-12">
-        <label> Quotation Number : </label>
-        {{data.quoteNumber}}
-      </div>
-      <div class="col-md-12">
-        <label> Delivery Date : </label>
-        {{data.deliveryDate}}
-      </div>
-      <div class="col-md-12">
-        <label> Terms & Condition : </label>
-        {{data.terms}}
+  <div class="row" style="padding-top:20px">
+    <div class="col-md-3">
+      <div class="row">
+        <div class="col-md-12">
+          <label> Name : </label>
+          {{data.name}}
+        </div>
+        <div class="col-md-12">
+          <label> Person Name : </label>
+          {{data.personName}}
+        </div>
+        <div class="col-md-12">
+          <label> Status : </label>
+          {{data.status}}
+        </div>
+        <div class="col-md-12">
+          <label> Address : </label>
+          {{data.address}}
+        </div>
+        <div class="col-md-12">
+          <label> PO Number : </label>
+          {{data.poNumber}}
+        </div>
+        <div class="col-md-12">
+          <label> Quotation Number : </label>
+          {{data.quoteNumber}}
+        </div>
+        <div class="col-md-12">
+          <label> Delivery Date : </label>
+          {{data.deliveryDate}}
+        </div>
+        <div class="col-md-12">
+          <label> Terms & Condition : </label>
+          {{data.terms}}
+        </div>
       </div>
     </div>
-  </div>
-<!-- </div>
+    <!-- </div>
 
 <div class="row" style="padding-top:20px"> -->
-  <div class="col-md-9">
-    <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
-    <table class="invoiceTable" style=" width: 100%;">
-      <tbody>
-        <tr style="background-color: #eeeeee;height: 50px;">
-          <th>S.No</th>
-          <th >Product Name</th>
-          <th>Price</th>
-          <th>Quantity</th>
-          <!-- <th></th> -->
-        </tr>
-        <tr ng-repeat="v in products track by $index">
-          <td>{{$index + 1}}</td>
-          <td>{{v.product}}</td>
-          <td>{{v.price}}</td>
-          <td>{{v.qty}}</td>
-          <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
-        </tr>
-        <!-- <tr  >
+    <div class="col-md-9">
+      <div class="row">
+        <wizard steps="projectSteps.steps" editable="false" active="data.selectedStatus" error="false"></wizard>
+      </div>
+      <div class="row" style="padding-top:15px">
+        <table class="invoiceTable" style=" width: 100%;">
+          <tbody>
+            <tr style="background-color: #eeeeee;height: 50px;">
+              <th>S.No</th>
+              <th>Product Name</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th ng-if="data.status=='Approved'">Received Quantity</th>
+            </tr>
+            <tr ng-repeat="v in products track by $index">
+              <td>{{$index + 1}}</td>
+              <td>{{v.product}}</td>
+              <td>{{v.price}}</td>
+              <td>{{v.qty}}</td>
+              <th ng-if="data.status=='Approved'"><input type="text" class="form-control-pos text-center" ng-model="v.receivedQty"></th>
+              <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
+            </tr>
+            <!-- <tr  >
           <td ng-if="showButton"><button style="background-color:white;border:none;" ng-click="addTableRow($index)" ><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
         </tr> -->
-      </tbody>
-    </table>
-    <div class="row" style="padding-top:15px" ng-if="data.status=='created'">
-      <div class="col-md-12">
-        <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
-          confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
+          </tbody>
+        </table>
       </div>
-    </div>
-    <div class="row" style="padding-top:15px" ng-if="data.status=='Sent'">
-      <div class="col-md-12 text-right">
-        <div class="btn-group">
-            <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="approve()"
-              confirm-button-type="default" cancel-button-type="default">Approve</button>
-              <button type="button" class="btn btn-danger pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="reject()"
-                confirm-button-type="default" cancel-button-type="default">Reject</button>
+      <div class="row" style="padding-top:15px" ng-if="data.status=='created'">
+        <div class="col-md-12">
+          <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
+            confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
+        </div>
+      </div>
+      <div class="row" style="padding-top:15px" ng-if="data.status=='Sent'">
+        <div class="col-md-12 text-right">
+          <div class="btn-group">
+            <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="approve()" confirm-button-type="default"
+              cancel-button-type="default">Approve</button>
+            <button type="button" class="btn btn-danger pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="reject()" confirm-button-type="default"
+              cancel-button-type="default">Reject</button>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="padding-top:15px" ng-if="data.status=='Approved'">
+        <div class="col-md-11 text-right">
+          <button type="button" class="btn btn-primary" ng-click="addToInvoice()"> Add To Invoice</button>
+        </div>
+        <div class="col-md-1 text-left">
+          <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="saveData()" confirm-button-type="default"
+            cancel-button-type="default"> Save</button>
+        </div>
+      </div>
+      <div class="row" style="padding-top:15px;" ng-if="invoice">
+        <div class="col-md-12 card" style="padding-top:15px">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Bank Account Number</label>
+                <input type="password" class="form-control" ng-model="data.accNo">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Re-Enter Bank Account Number</label>
+                <input type="text" class="form-control" ng-model="data.reaccNo">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Bank IFSC Code</label>
+                <input type="password" class="form-control" ng-model="data.ifsc">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Re-Enter Bank IFSC Code</label>
+                <input type="text" class="form-control" ng-model="data.reifsc">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Bank Name</label>
+                <input type="text" class="form-control" ng-model="data.bankName" typeahead="bank as bank for bank in bankList | filter:$viewValue">
+              </div>
+            </div>
+            <div class="col-md-6 text-right" style="padding-top:20px">
+              <div class="form-group">
+                <button type="button" class="btn btn-primary" ng-click="saveBankDetails()"> Save</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </div>
